# amtsguide_public

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: sample.yaml
docs/: error-policy.md  human-intervention.md  measured-iteration.md  privacy.md  prompt-telemetry.md  stop-rules.md  what-stand-means.md
examples/: .gitkeep  change_log.valid.json  generation_attempt.valid.json  prompt_diff.valid.json  prompt_telemetry.valid.json  readiness_card.valid.json  text.forbidden_term.md  text.hallucinated_number.md  text.valid.md  work_product.missing_metadata.json  work_product.missing_verified_at.json  work_product.valid.json
schemas/: .gitkeep  change_log.schema.json  generation_attempt.schema.json  human_intervention.schema.json  pattern_library.schema.json  prompt_diff.schema.json  prompt_telemetry.schema.json  readiness_card.schema.json  work_product.schema.json
scripts/: leak_guard.py
src/amtsguide_readiness_spec/: __init__.py  cli.py
src/amtsguide_readiness_spec/validators/: __init__.py  lexicon.py  numbers.py  prompt_telemetry.py  work_product.py
tests/: .gitkeep  __init__.py  conftest.py  test_lexicon.py  test_numbers.py  test_prompt_telemetry.py  test_schemas.py  test_work_product.py
